# agent-world

./: .dockerignore  .env.example  .gitignore  .pyspelling.yml  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  QA-REPORT.md  README.md  RELEASE_BODY.md  SECURITY.md  docker-compose-emergence.yml  docker-compose-federation.yml  docker-compose-v3.yml  docker-compose.yml  run_emergent.sh
agent-runtime/: .dockerignore  Dockerfile  pyproject.toml  requirements-lock.txt
agent-runtime/agent_runtime/: __init__.py  __main__.py  cli.py  config.py  env_loader.py  pool.py  presets.py
agent-runtime/agent_runtime/a2a/: __init__.py  batch_client.py  client.py  config.py  message.py  perception.py  rest_world_client.py  world_client.py
agent-runtime/agent_runtime/actions/: __init__.py  bounty_hunter.py  oracle_responder.py
agent-runtime/agent_runtime/agent/: __init__.py  capability.py
agent-runtime/agent_runtime/context/: __init__.py  budget.py  engine.py  processors.py
agent-runtime/agent_runtime/core/: __init__.py  act.py  async_decide.py  decide.py  experience.py  intervention_checker.py  llm_decide.py  memory_aware_decide.py  message_queue.py  reflect.py  think_loop.py
agent-runtime/agent_runtime/crypto/: __init__.py  keys.py  nonce.py  registry.py  signing.py
agent-runtime/agent_runtime/diary/: __init__.py  diary.py  generator.py
agent-runtime/agent_runtime/documentary/: __init__.py  collector.py  composer.py  narrator.py  renderer.py
agent-runtime/agent_runtime/emotion/: __init__.py  engine.py  mood.py
agent-runtime/agent_runtime/experiment/: __init__.py  ab_framework.py  charts.py  config.py  dsl.py  report.py  reproducibility.py  rest_api.py  statistics.py  world_engine_adapter.py
agent-runtime/agent_runtime/export/: __init__.py  behavior_log.py  economy_export.py  network_export.py
agent-runtime/agent_runtime/federation/: __init__.py  client.py
agent-runtime/agent_runtime/lifecycle/: __init__.py
agent-runtime/agent_runtime/llm/: __init__.py  anthropic_provider.py  base.py  connection_test.py  cost.py  decision_log.py  factory.py  fallback.py  ollama_provider.py  openai_provider.py  prompts.py  provider_registry.py  queue.py  rate_limiter.py
agent-runtime/agent_runtime/memory/: __init__.py  embedding.py  long_term.py  memory_recall.py  persistent_store.py  short_term.py  vector_memory.py  working_memory.py
agent-runtime/agent_runtime/models/: __init__.py  agent_state.py  enums.py  personality.py  phase_abilities.py  skill.py  values.py
agent-runtime/agent_runtime/observability/: __init__.py
agent-runtime/agent_runtime/organization/: __init__.py  formation.py  governance.py  governance_analysis.py  proposal.py  (+4 more)
agent-runtime/tests/: conftest.py  test_a2a_client.py  test_action_diversity.py  test_action_executor.py  test_action_feedback_loop.py  test_async_decide.py  test_cli.py  test_connection_test.py  test_context_engine.py  test_context_modules.py  test_context_pipeline.py  test_crypto.py  test_cultural_transmission.py  test_data_isolation.py  test_decide.py  test_decide_robustness.py  test_embedding.py  test_emotion.py  test_env_loader.py  test_experiment.py  test_export.py  test_fallback.py  test_federation_migration.py  test_federation_sync.py  test_feed.py  test_governance_analysis.py  test_group_identity.py  test_hot_swap.py  test_intervention_checker.py  test_language_emergence.py  test_language_experiment_integration.py  test_lifecycle.py  test_llm.py  test_llm_decide.py  test_llm_prompts.py  test_llm_queue.py  test_long_term_memory.py  test_main.py  test_memory_aware_decide.py  test_memory_recall.py  (+36 more)
plugins/data-analysis-plugin/: Cargo.toml  README.md  skills.yaml
sdk/: README.md  pyproject.toml
sdk/agent_world_sdk/: __init__.py  analyze.py  behavior.py  client.py  dataframe.py  economic.py  experiments.py  export.py  research_formats.py  social.py  world.py
sdk/examples/: analysis_demo.ipynb  quickstart.ipynb  research_analysis.ipynb
sdk/plugin-pack/: Cargo.toml
sdk/plugin-publish/: Cargo.toml
sdk/plugin-sdk-python/: README.md  pyproject.toml
sdk/plugin-sdk-typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/plugin-test-runner/: Cargo.toml
sdk/tests/: test_analyze.py  test_existing_modules.py  test_research_formats.py
world-engine/: Cargo.toml  Dockerfile  Dockerfile.local  build.rs
world-engine/benches/: hotpath_benchmarks.rs  tick_benchmark.rs
world-engine/docs/: cross-world-interaction-guide.md
world-engine/examples/: perf_baseline.rs
world-engine/src/: api.rs  api_ab_experiment.rs  api_agents_ext.rs  api_auth.rs  api_auth_handlers.rs  api_bank.rs  api_behavior_log.rs  api_buildings.rs  api_coordination_tasks.rs  api_dashboard.rs  api_diary.rs  api_diplomacy.rs  api_dsl.rs  api_escrow.rs  api_experiment.rs  api_export.rs  api_export_v1.rs  api_federation.rs  api_federation_trade.rs  api_feed.rs  api_governance.rs  api_human.rs  api_human_agent.rs  api_inheritance.rs  api_investment.rs  api_legislation.rs  api_marketplace.rs  api_mentorship.rs  api_network_graph.rs  api_org.rs  api_plugins.rs  api_population.rs  api_providers.rs  api_report.rs  api_reputation.rs  api_research.rs  api_stocks.rs  api_subworld.rs  api_tasks.rs  api_tool_marketplace.rs  (+15 more)
world-engine/tests/: api_escrow_test.rs  api_investment_test.rs  api_legislation_test.rs  api_tasks_test.rs  auth_rbac_test.rs  benchmark_100_agents.rs  e2e_demo.rs  e2e_full_flow.rs  e2e_human_agent.rs  e2e_smoke_test.rs  e2e_validation.rs  export_api.rs  federation_api_integration.rs  federation_multi_instance_e2e.rs  feed_api.rs  governance_api.rs  grpc_integration.rs  human_as_agent_e2e.rs  legislation_cycle_e2e.rs  marketplace_integration.rs  org_formation_integration.rs  p0_6_two_agent_100_ticks.rs  phase_442_e2e_integration.rs  population_api.rs  provider_api.rs  provider_config_store.rs  reputation_integration.rs  self_governance_integration.rs  sse_endpoint.rs  stress_100_agents.rs  third_party_agent_api.rs  tick_scheduler_integration.rs  wal_recovery.rs  world_engine_integration.rs
(+560 files in other folders)
