[project]
name = "agent-world-runtime"
version = "1.1.0"
description = "Agent runtime for Agent World — think loop, memory, survival"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "numpy>=1.24",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
experiment = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "fpdf2>=2.8",
]
documentary = [
    "matplotlib>=3.8",
    "networkx>=3.2",
    "edge-tts>=6.1",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_runtime"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "ASYNC", "UP"]

[tool.mypy]
python_version = "3.11"
# Incremental adoption: keep core strict checks but relax noisy ones.
# Original strict = true adds: disallow-any-generics, no-any-return,
# disallow-untyped-defs, disallow-incomplete_defs, warn-return-any, etc.
# We keep strict base but selectively allow the errors common in this codebase.
disable_error_code = [
    "no-untyped-def",     # untyped functions (too many to fix at once)
    "no-untyped-call",    # calls to untyped functions
    "no-redef",           # local var shadowing from pattern matching / re-assignment
    "misc",               # minor misc errors (e.g. kwargs collision in overrides)
]
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 120
markers = [
    "integration: marks tests that spawn real OS processes (deselect with '-m \"not integration\"')",
]
