[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-world-sdk"
version = "0.1.0"
description = "Python SDK for the Agent World research API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
