[package]
name = "agent-world-engine"
version = "0.1.0"
edition = "2021"
description = "World engine for Agent World — state, time, economy, rules"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
thiserror = "1"
anyhow = "1"
sha2 = "0.10"
tempfile = "3"
tokio-stream = "0.1.18"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tonic-build = "0.12"
