[package]
name = "agent-world-engine"
version = "1.0.0"
edition = "2021"
description = "World engine for Agent World — state, time, economy, rules"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
thiserror = "1"
anyhow = "1"
sha2 = "0.10"
tempfile = "3"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tokio-util = { version = "0.7.18", features = ["rt"] }
notify = "8.2.0"
reqwest = { version = "0.12", features = ["stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "tick_benchmark"
harness = false

[build-dependencies]
tonic-build = "0.12"
