[package]
name = "data-analysis-plugin"
version = "1.0.0"
edition = "2021"
description = "Agent World plugin for economy data analysis — GDP, wealth distribution, Gini coefficient"
license = "MIT"
authors = ["Agent World Community"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true
strip = true
