[package]
name = "plugin-pack"
version = "0.1.0"
edition = "2021"
description = "Pack Agent World plugins into distributable WASM bundles"
license = "MIT"

[[bin]]
name = "plugin-pack"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
colored = "2"
anyhow = "1"
zip = "2"
