[package]
name = "plugin-test-runner"
version = "0.1.0"
edition = "2021"
description = "Local test framework for Agent World plugins — no World Engine required"
license = "MIT"

[[bin]]
name = "plugin-test-runner"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
colored = "2"
anyhow = "1"
